--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-app.name=My Maven Application
+app.name=MyMavenApp
+app.version=1.0
+app.description=Sample Maven project for Jenkins CI
+``---
+
+Unfortunately, there was an issue generating the downloadable ZIP file. Would you like me to try again and provide it as a downloadable archive?
 
