--- a/src/test/resources/test-config.properties
+++ b/src/test/resources/test-config.properties
@@ -1,10 +1,3 @@
-# Test Configuration
-app.name=Test Maven App
-app.version=1.0.0-test
-app.environment=test
-
-# Mock Database Configuration
-db.url=jdbc:h2:mem:testdb
-db.username=test
-db.password=test123
-
+test.environment=local
+test.timeout=30
+test.logging.level=DEBUG
